--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-config-rooks",
-  "version": "3.4.2-dev.0",
+  "version": "3.4.2",
   "description": "Eslint config for rooks.",
   "keywords": [
     "eslint",
