--- a/packages/outside-click/package.json
+++ b/packages/outside-click/package.json
@@ -29,7 +29,7 @@
     "hooks",
     "ref outside click"
   ],
-  "version": "3.4.2-dev.0",
+  "version": "3.4.2",
   "_id": "@rooks/use-outside-click@",
   "publishConfig": {
     "access": "public"
