--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -1,6 +1,6 @@
 {
   "name": "storybook",
-  "version": "3.4.2-dev.0",
+  "version": "3.4.2",
   "private": true,
   "description": "Storybook for hooks",
   "main": "index.js",
