--- a/packages/visibility-sensor/package.json
+++ b/packages/visibility-sensor/package.json
@@ -29,7 +29,7 @@
     "rooks",
     "visibility sensor hook"
   ],
-  "version": "3.4.2-dev.0",
+  "version": "3.4.2",
   "_id": "@rooks/use-visibility-sensor@",
   "publishConfig": {
     "access": "public"
