--- a/packages/will-unmount/package.json
+++ b/packages/will-unmount/package.json
@@ -30,7 +30,7 @@
     "unmount",
     "unmount hook"
   ],
-  "version": "3.4.2-dev.0",
+  "version": "3.4.2",
   "_id": "@rooks/use-will-unmount@",
   "publishConfig": {
     "access": "public"
