--- a/packages/worker/package.json
+++ b/packages/worker/package.json
@@ -20,7 +20,7 @@
     "pregenerate:types": "rimraf index.d.ts",
     "generate:types": "tsc"
   },
-  "version": "3.4.2-dev.0",
+  "version": "3.4.2",
   "_id": "@rooks/use-worker@",
   "keywords": [
     "react-hooks.org",
