--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@babel/preset-env": "7.5.5",
     "@babel/preset-react": "7.0.0",
     "@testing-library/react": "9.3.2",
+    "@testing-library/react-hooks": "3.2.1",
     "@types/react": "*",
     "@types/react-dom": "*",
     "babel-core": "^7.0.0-bridge.0",
@@ -53,6 +54,9 @@
     "mini-css-extract-plugin": "0.8.0",
     "ora": "4.0.3",
     "raf": "3.4.1",
+    "react": "16.9.0",
+    "react-dom": "16.9.0",
+    "react-test-renderer": "16.9.0",
     "read-pkg-up": "7.0.0",
     "replace-string": "2.0.0",
     "rollup": "1.20.3",
