--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -8,10 +8,9 @@ jobs:
 
     steps:
       - uses: actions/checkout@master
-      - name: Use Node.js 10.x
-        uses: actions/setup-node@v1
-        with:
-          version: 10.x
+      - name: Get tag info
+        id: tags
+        uses: ./.github/actions/get-release-tags
       - name: Generate the changelog
         id: changelog
         uses: ./.github/actions/generate-lerna-changelog
