--- a/lerna.json
+++ b/lerna.json
@@ -1,8 +1,9 @@
 {
   "npmClient": "yarn",
-  "packages": [
-    "packages/*"
-  ],
+  "packages": ["packages/*"],
   "useWorkspaces": true,
-  "version": "3.4.3"
+  "version": "3.4.3",
+  "changelog": {
+    "repo": "imbhargav5/rooks"
+  }
 }
