--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "build": "yarn run build:shared --stream --parallel && yarn run build:independent  --stream --parallel && yarn run build:rooks && yarn run build:demos  --stream --parallel",
     "generate:types": "lerna run generate:types --stream",
     "ga-prerelease-version": "lerna version prerelease --force-publish=* --no-commit-hooks --no-push --yes",
+    "prerelease-version-bump": "yarn run ga-prerelease-version --preid ${git rev-parse HEAD | cut -c1-8}",
     "ga-prerelease-publish": "lerna publish from-git --force-publish=* --yes",
     "release-version-bump": "lerna version --force-publish=*",
     "ga-release-publish": "lerna publish from-git  --force-publish=* --yes",
