--- a/lerna.json
+++ b/lerna.json
@@ -4,7 +4,7 @@
     "packages/*"
   ],
   "useWorkspaces": true,
-  "version": "3.4.4-6d7bf229.0",
+  "version": "3.4.4-canary.0",
   "changelog": {
     "repo": "imbhargav5/rooks",
     "cacheDir": ".changelog",
