--- a/packages/did-mount/package.json
+++ b/packages/did-mount/package.json
@@ -30,7 +30,7 @@
     "componentDidMount",
     "lifecycle"
   ],
-  "version": "3.4.4-6d7bf229.0",
+  "version": "3.4.4-canary.0",
   "_id": "@rooks/use-did-mount@",
   "publishConfig": {
     "access": "public"
