--- a/packages/interval/package.json
+++ b/packages/interval/package.json
@@ -29,7 +29,7 @@
     "setInterval",
     "interval"
   ],
-  "version": "3.4.4-6d7bf229.0",
+  "version": "3.4.4-canary.0",
   "_id": "@rooks/use-interval@",
   "publishConfig": {
     "access": "public"
