--- a/packages/localstorage/package.json
+++ b/packages/localstorage/package.json
@@ -28,7 +28,7 @@
     "rooks",
     "hooks"
   ],
-  "version": "3.4.4-6d7bf229.0",
+  "version": "3.4.4-canary.0",
   "_id": "@rooks/use-localstorage@",
   "publishConfig": {
     "access": "public"
