--- a/packages/mouse/package.json
+++ b/packages/mouse/package.json
@@ -29,7 +29,7 @@
     "mouse",
     "mouse hook"
   ],
-  "version": "3.4.4-6d7bf229.0",
+  "version": "3.4.4-canary.0",
   "_id": "@rooks/use-mouse@",
   "publishConfig": {
     "access": "public"
