--- a/packages/online/package.json
+++ b/packages/online/package.json
@@ -29,7 +29,7 @@
     "online status",
     "online status hook"
   ],
-  "version": "3.4.4-6d7bf229.0",
+  "version": "3.4.4-canary.0",
   "_id": "@rooks/use-online@",
   "publishConfig": {
     "access": "public"
