--- a/packages/rooks/package.json
+++ b/packages/rooks/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rooks",
-  "version": "3.4.4-6d7bf229.0",
+  "version": "3.4.4-canary.0",
   "description": "Useful React hooks for everyone.",
   "author": "Bhargav Ponnapalli <bhargavponnapalli.5@gmail.com> (https://github.com/imbhargav5)",
   "homepage": "https://github.com/react-hooks-org/rooks#readme",
