--- a/packages/throttle/package.json
+++ b/packages/throttle/package.json
@@ -32,7 +32,7 @@
     "react": ">=16.8.0",
     "react-dom": ">=16.8.0"
   },
-  "version": "3.4.4-6d7bf229.0",
+  "version": "3.4.4-canary.0",
   "_id": "@rooks/use-throttle@",
   "readme": "ERROR: No README data found!",
   "publishConfig": {
