--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -1,10 +1,6 @@
 name: Pull Request
 
-on:
-  push:
-    branches:
-      - master
-
+on: pull_request
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -27,13 +23,3 @@ jobs:
           yarn build:action
       - name: test
         run: yarn test
-      # - name: Add npm token
-      #   run: echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > ~/.npmrc
-      # - name: Create prerelease version
-      #   run: yarn run ga-prerelease-version --preid ${GITHUB_SHA::8}
-      # - name: Publish prerelease version
-      #   run: yarn run ga-prerelease-publish --dist-tag next
-      # - name: deploy
-      #   env:
-      #     ZEIT_TOKEN: ${{secrets.ZEIT_TOKEN}}
-      #   run: yarn deploy --token $ZEIT_TOKEN
