--- a/packages/keys/package.json
+++ b/packages/keys/package.json
@@ -31,7 +31,7 @@
   "peerDependencies": {
     "react": ">=16.8.0"
   },
-  "version": "3.5.0",
+  "version": "3.5.1-canary.0",
   "_id": "@rooks/use-keys@",
   "publishConfig": {
     "access": "public"
