--- a/.github/workflows/canary.yml
+++ b/.github/workflows/canary.yml
@@ -32,12 +32,20 @@ jobs:
         run: yarn run readme-to-docs
       - name: Build docusaurus
         run:  cd packages/docusaurus && yarn build
+            - name: Check if releasing from master
+        id: is_master
+        uses: ./.github/actions/ref-matches-branch
+        with:
+          name: master
       - name: Get latest tag info
         id: latestTag
+        if: steps.is_master.outputs.result == 1
         uses: ./.github/actions/get-latest-tag
       - name: Version docusaurus
+        if: steps.is_master.outputs.result == 1
         run:  cd packages/docusaurus && yarn run docs-version ${{steps.latestTag.outputs.latest}}
       - name: Commit docusaurus
+        if: steps.is_master.outputs.result == 1
         run: |
           git add packages/docusaurus
           git -c user.name="imbhargav5" -c user.email="imbhargav5@users.noreply.github.com" \
@@ -50,4 +58,5 @@ jobs:
     #   - name: Create prerelease version
     #     run: yarn run ga-prerelease-version --preid ${GITHUB_SHA::8}
       - name: Publish prerelease version
+        if: steps.is_master.outputs.result == 1
         run: yarn run ga-npm-publish --dist-tag canary
