--- a/.github/workflows/version-bump.yml
+++ b/.github/workflows/version-bump.yml
@@ -46,3 +46,22 @@ jobs:
           git -c user.name="imbhargav5" -c user.email="imbhargav5@users.noreply.github.com" \
             commit -m "Add ${{ steps.tags.outputs.new }} to CHANGELOG.md [skip ci]" --no-verify --quiet
           git push "https://imbhargav5:${{ secrets.GITHUB_TOKEN }}@github.com/${GITHUB_REPOSITORY}.git" master
+      - name: Generate docusaurus
+        if: steps.is_master.outputs.result == 1
+        run: yarn run readme-to-docs
+      - name: Build docusaurus
+        if: steps.is_master.outputs.result == 1
+        run:  cd packages/docusaurus && yarn build
+      - name: Version docusaurus
+        if: steps.is_master.outputs.result == 1
+        run:  cd packages/docusaurus && yarn run docs-version ${{steps.latestTag.outputs.latest}}
+      - name: Commit docusaurus
+        if: steps.is_master.outputs.result == 1
+        run: |
+          git add packages/docusaurus
+          git -c user.name="imbhargav5" -c user.email="imbhargav5@users.noreply.github.com" \
+            commit -m "Update ${{ steps.tags.outputs.new }} docusaurus [skip ci]" --no-verify --quiet
+          git push "https://imbhargav5:${{ secrets.GITHUB_TOKEN }}@github.com/${GITHUB_REPOSITORY}.git" master
+      - name: Deploy docusaurus
+        if: steps.is_master.outputs.result == 1
+        run: cd packages/docusaurus && yarn run deploy --token $ZEIT_TOKEN      
