--- a/.github/workflows/version-bump.yml
+++ b/.github/workflows/version-bump.yml
@@ -33,6 +33,14 @@ jobs:
         uses: ./.github/actions/ref-matches-branch
         with:
           name: master
+      - name: Installs yarn
+        run: npm i -g yarn
+      - name: Install now
+        run: now --version || npm i -g now
+      - name: yarn install and build
+        run: |
+          yarn
+          yarn build:action
       - name: Generate docusaurus
         if: steps.is_master.outputs.result == 1
         run: yarn run readme-to-docs
