--- a/.github/workflows/version-bump.yml
+++ b/.github/workflows/version-bump.yml
@@ -11,6 +11,10 @@ jobs:
     steps:
       - name: Checkout the tag
         uses: actions/checkout@v1.0.0
+      - name: Use Node.js 12.x
+        uses: actions/setup-node@v1.1.0
+        with:
+          version: 12.x
       - name: Get tag info
         id: tags
         uses: ./.github/actions/get-release-tags
