--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -32,6 +32,20 @@ jobs:
         run: yarn build:action
       - name: test
         run: yarn test
+      - name: Generate docusaurus        
+        run: yarn run readme-to-docs
+      - name: Build docusaurus        
+        run:  cd packages/docusaurus && yarn build
+      - name: Commit docusaurus        
+        run: |
+          git add packages/docusaurus
+          git -c user.name="imbhargav5" -c user.email="imbhargav5@users.noreply.github.com" \
+            commit -m "Update ${{ steps.tags.outputs.new }} docusaurus [skip ci]" --no-verify --quiet
+          git push "https://imbhargav5:${{ secrets.GITHUB_TOKEN }}@github.com/${GITHUB_REPOSITORY}.git" master
+      - name: Deploy docusaurus        
+        env:
+          ZEIT_TOKEN: ${{secrets.ZEIT_TOKEN}}
+        run: cd packages/docusaurus && yarn run deploy --token $ZEIT_TOKEN
       - name: deploy
         env:
           ZEIT_TOKEN: ${{secrets.ZEIT_TOKEN}}
