--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -36,13 +36,15 @@ jobs:
         run: yarn run readme-to-docs
       - name: Build docusaurus        
         run:  cd packages/docusaurus && yarn build
-      - name: Commit docusaurus        
+      - name: Commit docusaurus
+        continue-on-error: true        
         run: |
           git add packages/docusaurus
           git -c user.name="imbhargav5" -c user.email="imbhargav5@users.noreply.github.com" \
             commit -m "Update ${{ steps.tags.outputs.new }} docusaurus [skip ci]" --no-verify --quiet
           git push "https://imbhargav5:${{ secrets.GITHUB_TOKEN }}@github.com/${GITHUB_REPOSITORY}.git" master
-      - name: Deploy docusaurus        
+      - name: Deploy docusaurus
+        continue-on-error: true        
         env:
           ZEIT_TOKEN: ${{secrets.ZEIT_TOKEN}}
         run: cd packages/docusaurus && yarn run deploy --token $ZEIT_TOKEN
