--- a/.github/workflows/canary.yml
+++ b/.github/workflows/canary.yml
@@ -9,6 +9,12 @@ jobs:
     runs-on: ubuntu-latest
     if: github.event.release.prerelease == true
     steps:
+      - name: "Check if user has write access"
+        uses: "lannonbr/repo-permission-check-action@2.0.0"
+        with:
+          permission: "write"
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}    
       - uses: actions/checkout@master
       - name: Use Node.js 12.x
         uses: actions/setup-node@v1
