--- a/.github/workflows/version-bump.yml
+++ b/.github/workflows/version-bump.yml
@@ -6,9 +6,14 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
-
+    runs-on: ubuntu-latest    
     steps:
+      - name: "Check if user has write access"
+        uses: "lannonbr/repo-permission-check-action@2.0.0"
+        with:
+          permission: "write"
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Checkout the tag
         uses: actions/checkout@v1.0.0
       - name: Use Node.js 12.x
@@ -38,11 +43,11 @@ jobs:
           changelog: ${{ steps.changelog.outputs.changelog }}
           token: ${{ secrets.BOT_TOKEN }}
           is-tag-stable: ${{steps.tag_is_stable.outputs.result}}
-      - name: Check if releasing from master
-        id: is_master
-        uses: ./.github/actions/ref-matches-branch
-        with:
-          name: master
+      # - name: Check if releasing from master
+      #   id: is_master
+      #   uses: ./.github/actions/ref-matches-branch
+      #   with:
+      #     name: master
       - name: Install now
         run: now --version || npm i -g now
       - name: Get yarn cache directory path
@@ -61,27 +66,25 @@ jobs:
       - name: yarn build
         run: yarn build:action
       - name: Generate docusaurus
-        if: steps.is_master.outputs.result == 1 && steps.tag_is_stable.outputs.result == 1
+        if: steps.tag_is_stable.outputs.result == 1
         run: yarn run readme-to-docs
       - name: Build docusaurus
-        if: steps.is_master.outputs.result == 1 && steps.tag_is_stable.outputs.result == 1
+        if: steps.tag_is_stable.outputs.result == 1
         run:  cd packages/docusaurus && yarn build
       - name: Version docusaurus
-        if: steps.is_master.outputs.result == 1 && steps.tag_is_stable.outputs.result == 1
+        if: steps.tag_is_stable.outputs.result == 1
         run:  cd packages/docusaurus && yarn run docs-version ${{steps.tags.outputs.new}}
       - name: Commit docusaurus
-        if: steps.is_master.outputs.result == 1 && steps.tag_is_stable.outputs.result == 1
+        if: steps.tag_is_stable.outputs.result == 1
         run: |
           git add packages/docusaurus
           git -c user.name="imbhargav5" -c user.email="imbhargav5@users.noreply.github.com" \
             commit -m "Update ${{ steps.tags.outputs.new }} docusaurus [skip ci]" --no-verify --quiet
       - name: Update CHANGELOG.md
-        if: steps.is_master.outputs.result == 1
         uses: ./.github/actions/update-changelog
         with:
           changelog: ${{ steps.changelog.outputs.changelog }}
       - name: Commit CHANGELOG.md
-        if: steps.is_master.outputs.result == 1
         run: |
           git add CHANGELOG.md
           git -c user.name="imbhargav5" -c user.email="imbhargav5@users.noreply.github.com" \
