--- a/packages/docusaurus/package.json
+++ b/packages/docusaurus/package.json
@@ -20,6 +20,8 @@
   "dependencies": {
     "@docusaurus/core": "2.0.0-alpha.66",
     "@docusaurus/preset-classic": "2.0.0-alpha.66",
+    "@widgetbot/embed-api": "^1.1.3",
+    "@widgetbot/react-embed": "^1.3.0",
     "classnames": "^2.2.6",
     "clsx": "^1.1.1",
     "react": "^16.10.2",
