--- a/.github/workflows/version-bump.yml
+++ b/.github/workflows/version-bump.yml
@@ -83,15 +83,17 @@ jobs:
           git -c user.name="imbhargav5" -c user.email="imbhargav5@users.noreply.github.com" \
             commit -m "Update ${{ steps.tags.outputs.new }} docusaurus [skip ci]" --no-verify --quiet
       - name: Update CHANGELOG.md
+        if: steps.tag_is_stable.outputs.result == 1
         uses: ./.github/actions/update-changelog
         with:
           changelog: ${{ steps.changelog.outputs.changelog }}
       - name: Commit CHANGELOG.md
+        if: steps.tag_is_stable.outputs.result == 1
         run: |
           git add CHANGELOG.md
           git -c user.name="imbhargav5" -c user.email="imbhargav5@users.noreply.github.com" \
             commit -m "Add ${{ steps.tags.outputs.new }} to CHANGELOG.md [skip ci]" --no-verify --quiet
-          git push -u "https://imbhargav5:${{ secrets.GITHUB_TOKEN }}@github.com/${GITHUB_REPOSITORY}.git" HEAD
+          git push -u "https://imbhargav5:${{ secrets.GITHUB_TOKEN }}@github.com/${GITHUB_REPOSITORY}.git" master
   always_job:
     name: Aways run job
     runs-on: ubuntu-latest
