--- a/package.json
+++ b/package.json
@@ -87,7 +87,7 @@
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.29.0",
     "shelljs": "0.8.3",
-    "terser": "^5.5.0",
+    "terser": "3",
     "tslib": "^2.0.3",
     "typescript": "^4.0.5",
     "unist-util-find": "^1.0.2",
@@ -96,15 +96,15 @@
     "unist-util-find-all-between": "^2.1.0",
     "unist-util-visit": "^2.0.3",
     "vfile-reporter": "^6.0.1",
-    "webpack": "^5.6.0",
+    "webpack": "4.29.1",
     "webpack-cli": "^4.2.0",
     "write-pkg": "3.2.0"
   },
-  "workspaces": [
-    "packages/*"
-  ],
-  "resolutions": {
-    "terser": "5.5"
+  "workspaces": {
+    "packages": [
+      "packages/*"
+    ],
+    "nohoist": [ "**/html-minifier-terser"]
   },
   "devDependencies": {}
 }
